[gd_scene load_steps=29 format=3 uid="uid://ctiav3c1o0s1l"]

[ext_resource type="Script" path="res://ship/ship.gd" id="1_0aayi"]
[ext_resource type="Texture2D" uid="uid://o6ona0ghgdxi" path="res://assets/ship.png" id="1_5sbj6"]
[ext_resource type="Script" path="res://components/move_component.gd" id="2_888hq"]
[ext_resource type="Texture2D" uid="uid://bp1urln7naldx" path="res://assets/ship_flame.png" id="2_m7syl"]
[ext_resource type="Script" path="res://components/move_input_component.gd" id="3_xokuu"]
[ext_resource type="Script" path="res://components/position_clamp_component.gd" id="5_scp3j"]
[ext_resource type="Resource" uid="uid://cs4arl1kbubkl" path="res://resources/move_stats/ship_move_stats.tres" id="6_g8637"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="7_0qt75"]
[ext_resource type="PackedScene" uid="uid://7syua40n7qm7" path="res://projectiles/small_laser.tscn" id="9_oojuo"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="10_dgply"]
[ext_resource type="Script" path="res://components/stats_component.gd" id="11_urbhf"]
[ext_resource type="Script" path="res://components/shake_component.gd" id="12_msnm8"]
[ext_resource type="Script" path="res://components/hurt_component.gd" id="14_7l7md"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="14_q3tbn"]
[ext_resource type="Script" path="res://components/destroyed_component.gd" id="15_s8qdb"]
[ext_resource type="PackedScene" uid="uid://bjk3f4n4ggm0j" path="res://effects/explossion_effect.tscn" id="16_q5ead"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xe3s2"]
atlas = ExtResource("1_5sbj6")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilvv0"]
atlas = ExtResource("1_5sbj6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vbuv"]
atlas = ExtResource("1_5sbj6")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_c4hwf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xe3s2")
}],
"loop": true,
"name": &"center",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilvv0")
}],
"loop": true,
"name": &"left",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vbuv")
}],
"loop": true,
"name": &"right",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_jjrkg"]
atlas = ExtResource("2_m7syl")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4asj"]
atlas = ExtResource("2_m7syl")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxo1c"]
atlas = ExtResource("2_m7syl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbiam"]
atlas = ExtResource("2_m7syl")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfngt"]
atlas = ExtResource("2_m7syl")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jbqt"]
atlas = ExtResource("2_m7syl")
region = Rect2(32, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_jybce"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjrkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4asj")
}],
"loop": true,
"name": &"center",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxo1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbiam")
}],
"loop": true,
"name": &"left",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfngt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jbqt")
}],
"loop": true,
"name": &"right",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_otdtl"]
radius = 5.0
height = 16.0

[node name="Ship" type="Node2D"]
script = ExtResource("1_0aayi")

[node name="Anchor" type="Node2D" parent="."]

[node name="AnimatedBody" type="AnimatedSprite2D" parent="Anchor"]
sprite_frames = SubResource("SpriteFrames_c4hwf")
animation = &"center"
autoplay = "center"

[node name="AnimatedFlames" type="AnimatedSprite2D" parent="Anchor"]
position = Vector2(0, 15)
sprite_frames = SubResource("SpriteFrames_jybce")
animation = &"center"
autoplay = "center"
frame_progress = 0.706895

[node name="SpawnLaserMarkers" type="Node2D" parent="."]

[node name="LeftMarker" type="Marker2D" parent="SpawnLaserMarkers"]
position = Vector2(-4, -4)

[node name="RightMarker" type="Marker2D" parent="SpawnLaserMarkers"]
position = Vector2(4, -4)

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_888hq")
actor = NodePath("..")

[node name="MoveInputComponent" type="Node" parent="." node_paths=PackedStringArray("move_component")]
script = ExtResource("3_xokuu")
move_component = NodePath("../MoveComponent")
move_stats = ExtResource("6_g8637")

[node name="PositionClampComponent" type="Node2D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("5_scp3j")
actor = NodePath("..")
metadata/_edit_lock_ = true

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("7_0qt75")
scene_to_spawn = ExtResource("9_oojuo")

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("10_dgply")
sprite = NodePath("../Anchor")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("11_urbhf")

[node name="ShakeComponent" type="Node" parent="." node_paths=PackedStringArray("node")]
script = ExtResource("12_msnm8")
node = NodePath("../Anchor")

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_mask = 0
script = ExtResource("14_q3tbn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CapsuleShape2D_otdtl")

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("14_7l7md")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")

[node name="DestroyedComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component", "destroy_effect_spawner_component")]
script = ExtResource("15_s8qdb")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
destroy_effect_spawner_component = NodePath("../DestroyEffectSpawnerComponent")

[node name="DestroyEffectSpawnerComponent" type="Node2D" parent="."]
script = ExtResource("7_0qt75")
scene_to_spawn = ExtResource("16_q5ead")
